--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,6 +34,33 @@
 	isbn = {0-471-43334-9}
 }
 
+@book{Friedberg,
+	author = {Stephen H.~Friedberg and Arnold J.~Insel and Lawrence E. Spence},
+	title = {Linear Algebra},
+	date = {2002},
+	edition = {4},
+	publisher = {Pearson}
+}
+
+
+@book{Gelfand,
+	author = {I.~M.~Gel'fand},
+	title = {Lectures on Linear Algebra},
+	date = {1963},
+	translator = {A.~Shenitzer},
+	language = {English},
+	origlanguage = {russian},
+	publisher = {Interscience Publishers, Inc.}
+}
+
+@unpublished{Gleason,
+	author = {Jonathan Gleason},
+	title = {Introduction to Analysis},
+	date = {2017},
+	OPTsubtitle = {subtitle},
+	url = {https://www.academia.edu/15037429/Introduction_to_Analysis},
+	urldate = {2017-07-29}
+}
 
 @online{Grayson,
 	author={Daniel R. Grayson},
